--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -122,5 +122,30 @@
 
 /************* END SKILLS AREA ***********/
 
+/************* START PROJECT AREA ***********/
 
+.site-main .project-area{
+    padding: 4rem 0;
+}
+
+.site-main .project-area .button-group button{
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--roboto);
+    text-transform: uppercase;
+}
+
+.site-main .project-area .button-group button + button{
+    padding-left: 3rem;
+}
+
+.site-main .project-area .grid .our-project > .title h4{
+    font: normal 700 25px/12px var(--roboto);
+}
+
+.site-main .project-area .grid .our-project .img:hover{
+    filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
+}
+
+/************* END PROJECT AREA ***********/
 
